# comp3011-web-api

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  4b8c4f5d9f7d_add_weather_observation_unique_key.py  81fd3948f942_create_phase1_core_schema.py
app/: config.py  database.py  dependencies.py  main.py
app/core/: __init__.py  age_band.py  auth.py  badc_csv.py  cache.py  import_normalization.py  route_risk_constants.py
app/models/: __init__.py  accident.py  cluster.py  lookups.py  weather.py
app/routers/: accidents.py  analytics.py  auth_probe.py  casualties.py  clusters.py  (+7 more)
docker/: entrypoint.sh
docs/: api-spec.md  architecture.md  deployment.md  development-plan.md  error-code-catalog.md  openapi-process.md  performance-benchmark.md  phase9-benchmark-results.json  project-brief.md
frontend/: .env.local.example  README.md  package-lock.json  package.json
scripts/: .gitkeep  benchmark_phase9.py  export_openapi.py  import.py  mint_token.py  smoke_deploy.py
tests/: conftest.py  test_accidents.py  test_auth.py  test_casualties.py  test_phase1_schema.py  test_phase4_relationships.py  test_phase5_weather_clusters.py  test_phase6_analytics.py  test_phase7_cache.py  test_phase7_import_determinism.py  test_phase7_import_utils.py  test_phase7_import_validate.py  test_phase9_error_catalog.py  test_route_risk.py  test_vehicles.py
(+31 files in other folders)
